# AndroidCydiaHook

./: .gitignore  README.md  gradle.properties  local.properties
app/: .gitignore  CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/shizzhan/sampleapp/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: hook.cpp  hook_example.c  hook_example.h
app/src/main/java/com/example/shizzhan/sampleapp/: MainActivity.java
app/src/main/jni/: fooSo.c
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/shizzhan/sampleapp/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
